apply feedback on search design

--- a/app/templates/search-future/announcements.hbs
+++ b/app/templates/search-future/announcements.hbs
@@ -74,423 +74,7 @@
             </div>
           </div>
           <div class="au-c-card au-o-box au-o-box--small">
-            <div class="auk-form-group">
-              <Auk::Label for="ministerName">
-                Minister
-              </Auk::Label>
-              <Auk::CheckboxList>
-                <Auk::Checkbox
-                  @label="Huidige Ministers"
-                  @labelSkin="bold"
-                  @checked={{true}}
-                  @indeterminate={{and (not this.isSelectedAllItems) this.isSelectedSomeItems}}
-                  @disabled={{@disabled}}
-                />
-                <div class="auk-u-ml-2">
-                  <Auk::Checkbox
-                    @label="Jan Jambon"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Hilde Crevits"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Bart Somers"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Ben Weyts"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Zuhal Demir"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Matthias Diependaele"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Lydia Peeters"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Benjamin Dalle"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Jo Brouns"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                </div>
-              </Auk::CheckboxList>
-              {{#if this.ministersHidden}}
-              <AuButton {{on "click" this.toggleMinistersHidden}} @skin="link" class="au-u-h-functional au-u-padding-left-none au-u-margin-top-tiny" @icon="add">Toon vorige ministers</AuButton>
-              {{ else }}
-              <Auk::CheckboxList>
-                <Auk::Checkbox
-                  @label="Vorige Ministers"
-                  @labelSkin="bold"
-                  @checked={{true}}
-                  @indeterminate={{and (not this.isSelectedAllItems) this.isSelectedSomeItems}}
-                  @disabled={{@disabled}}
-                />
-                <div class="auk-u-ml-2">
-                  <Auk::Checkbox
-                    @label="Paul Akkermans"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Bert Anciaux"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Eddy Baldewijns"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Wouter Beke"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Edward Beysen"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Gilbert Bossuyt"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Geert Bourgeois"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Paul Breyne"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Jacky Buchmann"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Adelheid Byttebier"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Patricia Ceysens"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Daniël Coens"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Norbert De Batselier"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Roger De Wulf"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Wivina Demeester-De Meyer"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Paul Deprez"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Leona Detiège"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Patrick Dewael"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Vera Dua"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Jos Dupré"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Jaak Gabriëls"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Mark Galle"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Sven Gatz"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Gaston Geens"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Brigitte Grouwels"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Veerle Heeren"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Liesbeth Homans"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Theo Kelchtermans"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Marino Keulen"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Renaat Landuyt"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Jan Lenssens"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Yves Leterme"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Ingrid Lieten"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Luc Martens"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Fientje Moerman"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Philippe Muyters"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Jean Pede"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Leo Peeters"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Kris Peeters"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Karel Poma"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Ludo Sannen"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Johan Sauwens"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Joke Schauvliege"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Hugo Schiltz"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Pascal Smet"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Steve Stevaert"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Rika Steyaert"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Jef Tavernier"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Bart Tommelein"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Annemie Turtelboom"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Anne Van Asbroeck"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Kathleen Van Brempt"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Freya Van den Bossche"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Luc Van den Bossche"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Luc Van den Brande"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Koen Van den Heuvel"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Paul Van Grembergen"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Dirk Van Mechelen"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Eric Van Rompuy"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Steven Vanackere"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Frank Vandenbroucke"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Marleen Vanderpoorten"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Jo Vandeurzen"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Guy Vanhengel"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Inge Vervotte"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Mieke Vogels"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Louis Waltniel"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                  <Auk::Checkbox
-                    @label="Hugo Weckx"
-                    @checked={{true}}
-                    @disabled={{@disabled}}
-                  />
-                </div>
-              </Auk::CheckboxList>
-              <AuButton {{on "click" this.toggleMinistersHidden}} @skin="link" class="au-u-h-functional au-u-padding-left-none au-u-margin-top-tiny" @icon="remove">Verberg vorige ministers</AuButton>
-              {{/if}}
-            </div>
+            <Utils::MinisterSelect />
           </div>
         </div>
       </div>
