--- a/app/components/utils/add-existing-piece.hbs
+++ b/app/components/utils/add-existing-piece.hbs
@@ -42,6 +42,7 @@
             <AuControlCheckbox
               data-test-add-existing-piece-checkbox={{true}}
               @checked={{includes row this.selected}}
+              @onChange={{fn this.select row}}
             />
           </td>
           <td class="auk-table__col--8">
