--- a/app/components/web-components/au-page-size.hbs
+++ b/app/components/web-components/au-page-size.hbs
@@ -5,6 +5,7 @@
       @options={{this.sizeOptions}}
       @selected={{@selectedSize}}
       @onChange={{@onChange}}
+      ...attributes
     as |option|>
       {{option}}
     </PowerSelect>
