--- a/app/components/search/navigation.hbs
+++ b/app/components/search/navigation.hbs
@@ -15,5 +15,10 @@
         {{t "agenda"}}
       </AuNavigationLink>
     </li>
+    <li class="au-c-list-navigation__item">
+      <AuNavigationLink @route="search.documents">
+        {{t "documents"}}
+      </AuNavigationLink>
+    </li>
   </ul>
 </div>
