added a check to see if user may edit on checkbox on kort bestek

--- a/app/components/news-item/table-row.hbs
+++ b/app/components/news-item/table-row.hbs
@@ -47,6 +47,7 @@
       @disabled={{or
         (not @newsItem)
         this.saveNewsItem.isRunning
+        (not (user-may "manage-news-items"))
       }}
       @onChange={{this.toggleInNewsletterFlag}}
     />
