add drafts structure

--- a/app/templates/newsletters.hbs
+++ b/app/templates/newsletters.hbs
@@ -12,6 +12,9 @@
           <Auk::Tab @route="newsletters.index">
             {{t "newsletters-tabs-overview"}}
           </Auk::Tab>
+          <Auk::Tab @route="newsletters.drafts">
+            Drafts
+          </Auk::Tab>
           <Auk::Tab @route="newsletters.search" @icon="search">
             {{t "newsletters-tabs-search"}}
           </Auk::Tab>
