--- a/app/components/news-item/table-row.hbs
+++ b/app/components/news-item/table-row.hbs
@@ -17,7 +17,7 @@
       </div>
       <div class="auk-u-mb-2">
         <AuContent>
-          <SanitizeHtml @raw={{true}} @value={{@newsItem.htmlContent}} @options={{this.sanitizeHtmlOptions}} />
+          <SanitizeHtml @raw={{true}} @value={{@newsItem.htmlContent}} />
         </AuContent>
       </div>
       {{#if @newsItem.remark}}
