--- a/app/templates/newsletters/search.hbs
+++ b/app/templates/newsletters/search.hbs
@@ -107,7 +107,7 @@
                   </h3>
                   <p class="auk-u-mr-2">
                     <AuContent>
-                      <SanitizeHtml @raw={{true}} @value={{row.htmlContent}} @options={{this.sanitizeHtmlOptions}} />
+                      <SanitizeHtml @raw={{true}} @value={{row.htmlContent}}/>
                     </AuContent>
                   </p>
                 </td>
