--- a/app/templates/search/cases.hbs
+++ b/app/templates/search/cases.hbs
@@ -24,16 +24,11 @@
       />
     </div>
   {{/if}}
-  {{#if (user-may "view-confidential-cases")}}
-    <div class="au-c-card au-o-box au-o-box--small">
-      <Auk::Label>{{t "confidential"}}</Auk::Label>
-      <AuControlCheckbox
-        @label={{t "search-confidential-only"}}
-        @checked={{this.confidentialOnly}}
-        @onChange={{set this "confidentialOnly"}}
-      />
-    </div>
-  {{/if}}
+  <Search::ConfidentialOnly 
+    @confidentialOnly={{this.confidentialOnly}}
+    @onChange={{set this "confidentialOnly"}}
+    @objectVerb={{t "cases"}}
+  />
 {{/in-element}}
 <div class="au-o-box au-o-box--small">
   {{#if this.model.length}}
