tweak draft layout

--- a/app/styles/au/_au-components.scss
+++ b/app/styles/au/_au-components.scss
@@ -35,6 +35,7 @@ $au-button-height: 3.4rem;
 @import 'ember-appuniversum/c-modal';
 @import "ember-appuniversum/c-sidebar";
 @import 'ember-appuniversum/c-table';
+@import 'ember-appuniversum/c-textarea';
 @import 'ember-appuniversum/c-toolbar';
 @import 'ember-appuniversum/c-toggle-switch';
 
