--- a/app/templates/newsletters/drafts.hbs
+++ b/app/templates/newsletters/drafts.hbs
@@ -64,6 +64,14 @@
           >
             {{t "open"}}
           </AuLink>
+          {{!-- <AuButton
+            @skin="naked"
+            @icon="bin"
+            @alert="true"
+            @hideText={{true}}
+          >
+            Delete
+          </AuButton> --}}
         </td>
       </c.body>
     </table.content>
