--- a/app/templates/newsletters/draft.hbs
+++ b/app/templates/newsletters/draft.hbs
@@ -22,6 +22,22 @@
         </Auk::Toolbar>
       </Auk::Panel::Header>
       <Auk::Panel::Body class="au-o-flow au-u-background-gray-100">
+        <AuFormRow @alignment="default">
+          <div class="au-u-flex au-u-flex--between au-u-flex--vertical-center">
+            <AuLabel for="title" class="au-u-margin-bottom-none">
+              Titel
+            </AuLabel>
+            <AuButton
+              @skin="naked"
+              @icon="copy"
+              @iconAlignment="left"
+            >
+              Kopieer tekst
+            </AuButton>
+          </div>
+          
+          <AuInput id="title" @width="block" value="Draft titel" />
+        </AuFormRow>
         <div class="auk-rdfa-holder {{if this.isFullscreen "auk-rdfa-fullscreen au-u-margin-top-none"}}">
           <div class="auk-rdfa-holder__header au-u-flex au-u-flex--between au-u-flex--vertical-center">
             {{#if this.isFullscreen}}
@@ -45,6 +61,13 @@
                 </AuDropdown>
               </div>
               <AuButtonGroup>
+                <AuButton
+                  @skin="naked"
+                  @icon="copy"
+                  @iconAlignment="left"
+                >
+                  Kopieer tekst
+                </AuButton>
                 <AuButton
                   @skin="naked"
                   @icon="minimize"
@@ -77,27 +100,36 @@
                   </AuButton>
                 </AuDropdown>
               </div>
-              <AuButton
-                @skin="naked"
-                @icon="expand"
-                @iconAlignment="left"
-                {{on "click" this.toggleFullscreen}}
-              >
-                {{t "fullscreen"}}
-              </AuButton>
+              <AuButtonGroup>
+                <AuButton
+                  @skin="naked"
+                  @icon="copy"
+                  @iconAlignment="left"
+                >
+                  Kopieer tekst
+                </AuButton>
+                <AuButton
+                  @skin="naked"
+                  @icon="expand"
+                  @iconAlignment="left"
+                  {{on "click" this.toggleFullscreen}}
+                >
+                  {{t "fullscreen"}}
+                </AuButton>
+              </AuButtonGroup>
             {{/if}}
           </div>
           <WebComponents::VlRdfaEditor
             data-test-newsletter-edit-item-rdfa-editor
             @handleRdfaEditorInit={{this.handleRdfaEditorInit}}
           />
-          <AuFormRow @alignment="default" class="au-u-margin-top">
-            <AuLabel for="input">
-              Opmerkingen
-            </AuLabel>
-            <AuTextarea id="textarea" @width="block" />
-          </AuFormRow>
         </div>
+        <AuFormRow @alignment="default" class="au-u-margin-top">
+          <AuLabel for="input">
+            Opmerkingen
+          </AuLabel>
+          <AuTextarea id="textarea" @width="block" />
+        </AuFormRow>
       </Auk::Panel::Body>
       <Auk::Panel::Footer class="au-u-background-gray-100">
         <Auk::Toolbar>
